--- a/Content/Project_02_01/Project_2_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_02_01/Project_2_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -289,7 +289,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Maps
-ContentBrowserDrawer.SelectedPaths=/Game/HUD
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.PluginFilters=
@@ -310,19 +310,19 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/HUD
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/FPWeapon
+ContentBrowserDrawer.JumpMRU=/All/Game/FirstPersonArms
+ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/Dungeon
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/HUD
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
-ContentBrowserDrawer.JumpMRU=/All/Game/FirstPersonArms
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Input
-ContentBrowserDrawer.JumpMRU=/All/Game/FPWeapon
-ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Maps
 ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps
 ContentBrowserDrawer.JumpMRU=/All/EngineData
 ContentBrowserDrawer.JumpMRU=/All/Game/Dungeon/Level_1
 ContentBrowserDrawer.JumpMRU=/All/Game/SFX
@@ -340,7 +340,7 @@ AssetPropertyPicker.CurrentViewType=0
 [EditorStartup]
 LastLevel=/Game/Project2Map
 LastLevel=/Game/Project2Map
-LastLevel=/Game/LevelPrototyping/TestFunctoinMap
+LastLevel=/Game/Maps/BigMap1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -350,6 +350,7 @@ DebuggerAttached=False
 DebuggerAttached=False
 DebuggerAttached=False
 None=======
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -358,11 +359,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/CrystalsPickup3.CrystalsPickup3
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/CrystalsPickup2.CrystalsPickup2
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/CrystalsPickup.CrystalsPickup
-OpenAssetsAtExit=/Game/HUD/HUD_Widget.HUD_Widget
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -390,7 +386,7 @@ MaterialForDroppedTextures=None
 MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", (LevelViewportsInfo=((CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=64146.343750),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=64146.343750),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=64146.343750),(CamPosition=(X=2375.001599,Y=2537.491994,Z=708.599149),CamRotation=(Pitch=-19.150000,Yaw=-118.875002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Project2Map.Project2Map", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamRotation=(Pitch=-3.642047,Yaw=0.235534,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", (LevelViewportsInfo=((CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1075.855930,Y=870.650332,Z=206.417670),CamRotation=(Pitch=-34.150000,Yaw=81.350002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-7.652693,Y=-6.390017,Z=-17655.992397),CamRotation=(Pitch=-29.625001,Yaw=45.599997,Roll=0.000000)),(),(),(),()))))
-EditorViews=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", (LevelViewportsInfo=((CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1075.855930,Y=870.650332,Z=206.417670),CamRotation=(Pitch=-34.150000,Yaw=81.350002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/LevelPrototyping/TestFunctoinMap.TestFunctoinMap", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=2280.915828,Y=857.433908,Z=157.775006),CamRotation=(Pitch=-0.175000,Yaw=-122.675004,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", (LevelViewportsInfo=((CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=-1016.413281,Y=1714.880582,Z=1585.757475),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1075.855930,Y=870.650332,Z=206.417670),CamRotation=(Pitch=-34.150000,Yaw=81.350002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/LevelPrototyping/TestFunctoinMap.TestFunctoinMap", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=2280.915828,Y=857.433908,Z=157.775006),CamRotation=(Pitch=-0.175000,Yaw=-122.675004,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Maps/BigMap1.BigMap1", (LevelViewportsInfo=((CamPosition=(X=-12585.001015,Y=-11501.677942,Z=205.000000),CamOrthoZoom=217852.875000),(CamPosition=(X=-12585.001015,Y=-11501.677942,Z=205.000000),CamOrthoZoom=217852.875000),(CamPosition=(X=-12585.001015,Y=-11501.677942,Z=205.000000),CamOrthoZoom=217852.875000),(CamPosition=(X=-2680.827373,Y=-4899.138250,Z=524.615171),CamRotation=(Pitch=-1.874899,Yaw=805.574999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))))
 None=======
 None=======
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport0",ConfigSettings=(ViewportType=LVT_OrthoYZ,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeSkyLightIlluminance=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,VisualizeTSR=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,SelectionOutlineColor0=0,SelectionOutlineColor1=0,SelectionOutlineColor2=0,SelectionOutlineColor3=0,SelectionOutlineColor4=0,SelectionOutlineColor5=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,VisualizeInstanceOcclusionQueries=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeLightFunctionAtlas=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapPersistentData=1,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeSkyLightIlluminance=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,VisualizeTSR=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,SelectionOutlineColor0=0,SelectionOutlineColor1=0,SelectionOutlineColor2=0,SelectionOutlineColor3=0,SelectionOutlineColor4=0,SelectionOutlineColor5=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,VisualizeInstanceOcclusionQueries=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeLightFunctionAtlas=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapPersistentData=1,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",SubstrateVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True,bAllowCinematicControl=True))
@@ -410,7 +406,7 @@ bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
 MinimapUnloadedOpacity=0.660000
-PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
+PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Maps/BigMap1.BigMap1", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.000
@@ -434,7 +430,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Bedlam/Project-1/Content/Project_02_01/Project_2_01/Content/LevelPrototyping
+UNR=../../../../../../Bedlam/Project-1/Content/Project_02_01/Project_2_01/Content/Maps
 BRUSH=../../../../../../Users/vp137/Documents/Unreal Projects/Project_2_01/Content/
 FBX=../../../../../../Users/vp137/Documents/Unreal Projects/Project_2_01/Content/
 FBXAnim=../../../../../../Users/vp137/Documents/Unreal Projects/Project_2_01/Content/
@@ -1579,6 +1575,8 @@ HierarchicalLODUtilities.TimeStamp=2024.10.05-18.05.04
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2024.10.05-18.05.20
 SequencerWidgets.LastCompileMethod=Unknown
+AndroidDeviceProfileSelector.TimeStamp=2024.10.05-18.11.14
+AndroidDeviceProfileSelector.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1854,6 +1852,10 @@ EditableTextBox.Rendering=True
 EditableTextBox.Navigation=True
 EditableTextBox.Localization=True
 EditableTextBox.Events=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Generic.Surface Materials=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1985,17 +1987,19 @@ RecentlyPlaced=/Game/Assets/Project02_Asset_Archway.Project02_Asset_Archway;
 None=======
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/HUD/HUD_Widget
-MRUItem2=/Game/FirstPerson/Blueprints/CrystalsPickup3
-MRUItem3=/Game/FirstPerson/Blueprints/CrystalsPickup2
-MRUItem4=/Game/Assets/Project02_Asset_Green_Crystal
-MRUItem5=/Game/FirstPerson/Blueprints/CrystalsPickup
-MRUItem6=/Game/LevelPrototyping/TestFunctoinMap
-MRUItem7=/Game/Assets/Proj2_pCylinder1
+MRUItem0=/Game/Maps/BigMap1
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/HUD/HUD_Widget
+MRUItem3=/Game/FirstPerson/Blueprints/CrystalsPickup3
+MRUItem4=/Game/FirstPerson/Blueprints/CrystalsPickup2
+MRUItem5=/Game/Assets/Project02_Asset_Green_Crystal
+MRUItem6=/Game/FirstPerson/Blueprints/CrystalsPickup
+MRUItem7=/Game/LevelPrototyping/TestFunctoinMap
+MRUItem8=/Game/Assets/Proj2_pCylinder1
 
 [MRU]
-MRUItem0=/Game/LevelPrototyping/TestFunctoinMap
+MRUItem0=/Game/Maps/BigMap1
+MRUItem1=/Game/LevelPrototyping/TestFunctoinMap
 
 [PluginBrowser]
 InstalledPlugins=InventorySystem
