--- a/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=243.076039,Y=1662.521798,Z=2446.858538),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=10.551976,Y=1704.541757,Z=2446.858534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=812.709570,Y=1172.206352,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=-53.186789,Y=1757.169095,Z=2446.858549),CamRotation=(Pitch=-57.200000,Yaw=5.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=1921.319979,Y=1842.419709,Z=2646.796019),CamRotation=(Pitch=-54.800000,Yaw=-100.600001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617,CamUpdated=True)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=-53.186789,Y=1757.169095,Z=2446.858549),CamRotation=(Pitch=-57.200000,Yaw=5.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=1972.217037,Y=2114.385631,Z=3039.025577),CamRotation=(Pitch=-54.800000,Yaw=-100.600001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617,CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -249,23 +249,24 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.JumpMRU=/All/Game/Enemies
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
-ContentBrowserDrawer.JumpMRU=/All/Game/MainLevel
-ContentBrowserDrawer.JumpMRU=/All/Game/GunModel
-ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
-ContentBrowserDrawer.JumpMRU=/All/Game/OfficeAssets
-ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown
+ContentBrowserDrawer.JumpMRU=/All/Game/SFX
 ContentBrowserDrawer.JumpMRU=/All/Game/MainCharacter
+ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserDrawer.JumpMRU=/All/Game/GunModel
+ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
+ContentBrowserDrawer.JumpMRU=/All/Game/Characters
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio
+ContentBrowserDrawer.JumpMRU=/All/Game/OfficeAssets
+ContentBrowserDrawer.JumpMRU=/All/Game/MainLevel
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
+ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Blueprints
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/MainCharacter/Player_Character
 ContentBrowserDrawer.JumpMRU=/All/Game/MainCharacter/Player_Character/PC_Animations
-ContentBrowserDrawer.JumpMRU=/All/Game/Characters
-ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
 ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4
 ContentBrowserDrawer.JumpMRU=/All/EngineData
@@ -277,7 +278,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input/Actions
-ContentBrowserDrawer.JumpMRU=/All/Game/VFX/Sparks
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1285,17 +1285,11 @@ BP_EnemyAI2_C.Networking=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1320,36 +1314,30 @@ None=======
 None=======
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Enemies/BP_EnemyAI2
-MRUItem1=/Game/Enemies/BP_EnemyAI
-MRUItem2=/Game/MainLevel/TheOfficeRW
-MRUItem3=/Game/Enemies/BP_ENEMYROBOT
-MRUItem4=/Game/Enemies/EnemyRobot01
-MRUItem5=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
-MRUItem6=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
-MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem8=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
-MRUItem9=/Game/VFX/Sparks/NS_Sparks_01
-MRUItem10=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
-MRUItem11=/Game/VFX/Electricity/NS_ReactiveElectricity_01
-MRUItem12=/Game/Enemies/EnemyRobot02
-MRUItem13=/Game/Enemies/EnemyRobot02_Skeleton
-MRUItem14=/Game/VFX/Explosion/NS_Explosions01
-MRUItem15=/Game/VFX/Explosion/M_Smoke
-MRUItem16=/Game/VFX/Explosion/SmokeAlpha01
-MRUItem17=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem18=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem19=/Game/TopDown/Input/Actions/IA_Move
-MRUItem20=/Game/TopDown/Input/IMC_Default
-MRUItem21=/Game/TopDown/Blueprints/IA_SetDestination_Click
-MRUItem22=/Game/TopDown/Blueprints/AC_Move
-MRUItem23=/Game/VFX/MuzzleFlash/MuzzlePlanes
-MRUItem24=/Game/VFX/MuzzleFlash/MuzzleCone
-MRUItem25=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
-MRUItem26=/Game/VFX/MuzzleFlash/M_MuzzleFlash
-MRUItem27=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
-MRUItem28=/Game/OfficeAssets/PM2_Office_Cubicles
-MRUItem29=/Game/GunModel/M249_SAW_MODEL
+MRUItem0=/Game/MainLevel/TheOfficeRW
+MRUItem1=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
+MRUItem2=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
+MRUItem3=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem4=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
+MRUItem5=/Game/VFX/Sparks/NS_Sparks_01
+MRUItem6=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
+MRUItem7=/Game/VFX/Electricity/NS_ReactiveElectricity_01
+MRUItem8=/Game/VFX/Explosion/NS_Explosions01
+MRUItem9=/Game/VFX/Explosion/M_Smoke
+MRUItem10=/Game/VFX/Explosion/SmokeAlpha01
+MRUItem11=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem12=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem13=/Game/TopDown/Input/Actions/IA_Move
+MRUItem14=/Game/TopDown/Input/IMC_Default
+MRUItem15=/Game/TopDown/Blueprints/IA_SetDestination_Click
+MRUItem16=/Game/TopDown/Blueprints/AC_Move
+MRUItem17=/Game/VFX/MuzzleFlash/MuzzlePlanes
+MRUItem18=/Game/VFX/MuzzleFlash/MuzzleCone
+MRUItem19=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
+MRUItem20=/Game/VFX/MuzzleFlash/M_MuzzleFlash
+MRUItem21=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
+MRUItem22=/Game/OfficeAssets/PM2_Office_Cubicles
+MRUItem23=/Game/GunModel/M249_SAW_MODEL
 
 [NiagaraRecent_EmittersAndSystems]
 MRUItem0=/Game/VFX/Sparks/NS_Sparks_01
@@ -1627,7 +1615,7 @@ bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
 
 [RootWindow]
-ScreenPosition=X=442.000 Y=403.000
+ScreenPosition=X=-1923.000 Y=202.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1672,7 +1660,7 @@ BRUSH=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content
 FBX=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
 FBXAnim=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
 GenericImport=../../../../../../Users/steve/Documents/GitHub/Project Dev Summer 2025 New/Project-1/Content/music/menu music (temp).mp3
-GenericExport=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
+GenericExport=C:/Bedlam/Project-1/Content/Project_03/Project_03_2D/Content
 GenericOpen=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
 GenericSave=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
 MeshImportExport=../../../../../../Users/steve/Documents/Unreal Projects/MyProject4/Content/
@@ -3127,7 +3115,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=AssetCheck
 
 [MaterialInstanceEditor]
 bShowGrid=True
