--- a/Content/Project_03/Project_03_2D/Config/DefaultEngine.ini
+++ b/Content/Project_03/Project_03_2D/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Project_03_2D
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Levels/TestLevel1.TestLevel1
+GameDefaultMap=/Game/Levels/TestLevel1.TestLevel1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
